2022-05-01  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-make-keywords-list): Remove.
	(ebuild-mode-font-lock-keywords): Inline its code.

	* ebuild-mode.el (ebuild-repo-mode, find-file-hook): Use ' rather
	than #' for quoting of function names.
	* glep-mode.el (glep-mode): Ditto.

2022-04-30  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.57 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode.el (ebuild-mode-make-keywords-list): Drop more
	compatibility code. regexp-opt of recent Emacs versions deletes
	duplicates and increases the max-specpdl-size limit by itself.

2022-04-28  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-make-keywords-list): Use prefix and
	suffix to override the defaults, instead of concatenating to them.
	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass-documentation):
	Override comment highlighting. Match only at the beginning of a
	comment line.

	* ebuild-mode.el (ebuild-mode-make-keywords-list)
	(ebuild-mode-get-keywords): Remove XEmacs 21.4 compatibility code.

2022-04-27  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode): Set sentence-end-double-space to t
	when editing eclasses.

2022-03-18  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.56 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass-documentation):
	Keyword @ECLASS-VARIABLE renamed to @ECLASS_VARIABLE.

2022-01-26  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-menu, ebuild-repo-mode-menu):
	Add entry for customize-group.

2022-01-16  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.55 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* ebuild-mode.el (ebuild-mode-eapi-list): Drop EAPI 5.

	* gentoo-newsitem-mode.el (gentoo-newsitem-insert-skeleton):
	Use ebuild-mode-full-name and ebuild-mode-mail-address as default
	author information.